<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="admiral.group.tuneconsultingtask.ui.project.ProjectFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_project" >

        <action
            android:id="@+id/action_navigation_home_to_newProjectFragment"
            app:destination="@id/newProjectFragment" />

        <action
            android:id="@+id/action_navigation_home_to_mainDataFragment"
            app:destination="@id/mainDataFragment" />

    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="admiral.group.tuneconsultingtask.ui.union.UnionFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_union" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="admiral.group.tuneconsultingtask.ui.settings.SettingsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/newProjectFragment"
        android:name="admiral.group.tuneconsultingtask.ui.newproject.NewProjectFragment"
        android:label="fragment_new_project"
        tools:layout="@layout/fragment_new_project" >

    </fragment>

    <fragment
        android:id="@+id/mainDataFragment"
        android:name="admiral.group.tuneconsultingtask.ui.maindata.MainDataFragment"
        android:label="fragment_main_data"
        tools:layout="@layout/fragment_main_data" >

        <argument
            android:name="id"
            app:argType="integer" />

        <action
            android:id="@+id/action_mainDataFragment_to_editFragment"
            app:destination="@id/editFragment" />
        <action
            android:id="@+id/action_mainDataFragment_to_newProjectFragment"
            app:destination="@id/newProjectFragment" />
    </fragment>

    <fragment
        android:id="@+id/editFragment"
        android:name="admiral.group.tuneconsultingtask.ui.edit.EditFragment"
        android:label="fragment_edit"
        tools:layout="@layout/fragment_edit" >

    <argument
        android:name="id"
        app:argType="integer" />
        <action
            android:id="@+id/action_editFragment_to_mainDataFragment"
            app:destination="@id/mainDataFragment" />

    </fragment>

</navigation>