<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.project.ProjectFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:textSize="34sp"
        android:text="@string/my_project"
        android:fontFamily="@font/sf_bold"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/my_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/background"
        android:layout_width="300dp"
        android:padding="5dp"
        android:visibility="gone"
        android:layout_height="300dp"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="45dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/illustration"/>


       <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
           android:layout_marginTop="25dp"
    android:gravity="center"
           android:textSize="17sp"
           android:textColor="#80000000"
    android:text="@string/txt_illlustration"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/myRecyclerView"
        android:visibility="gone"
        tools:listitem="@layout/itemview"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/text_home"
        app:layout_constraintBottom_toTopOf="@id/add_project"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

<!--    <androidx.appcompat.widget.AppCompatButton-->
<!--        android:id="@+id/add_project"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:text="@string/add_project"-->
<!--        android:textColor="#fff"-->
<!--        android:background="@drawable/button_enabled"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="60dp"/>-->

    <admiral.group.tuneconsultingtask.ui.customView.CustomButton
        android:id="@+id/add_project"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:text="@string/add_project"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        app:background="@drawable/button_enabled"
        app:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>